# better-control

./: .clang-format  .clangd  .gitignore  CONTRIBUTING.md  README.md  autostart.c  autostart.h  betterctl.sh  display.c  main.c  meson.build  meson_options.txt  requirements.txt  style.css  ui.glade  volume.c  volume.h  wifi.c
assets/: bc.gresource.xml  style.css  window.glade
assets/tabs/: volume.glade
include/: app.h  display.h  ui.h  wifi.h
include/tabs/: volume.h  volume_logic.h
src/: app.c  better_control.py  control.py  main.c  meson.build  wifi.c
src/models/: bluetooth_device.py  wifi_network.py
src/tabs/: meson.build  volume.c  volume_logic.c
src/tools/: bluetooth.py  display.py  globals.py  speedtest.py  volume.py  wifi.py
src/tools/parsers/: bluetooth_parser.py  wifi_parser.py
src/tools/services/: bluetooth_service.py  bluetoothctl_service.py  nmcli_service.py  wifi_service.py
src/translations/: __init__.py  translation_manager.py
src/translations/languages/: __init__.py  en.py  es.py  fr.py  hi.py  id.py  pt.py
src/ui/: main_window.py
src/ui/css/: animations.css  animations.py  spacing.css
src/ui/tabs/: battery_tab.py  bluetooth_tab.py  display_tab.py  power_tab.py  settings_tab.py  usbguard_tab.py  wifi_tab.py
src/ui/view_models/: bluetooth_device_view_model.py  wifi_network_view_model.py
src/ui/widgets/: bluetooth_device_row.py  wifi_network_row.py
src/utils/: arg_parser.py  logger.py  settings.py  tab_name.py
tests/: run_tests.py  test_bluetooth.py
